# cicd_dvc_2

./: .gitignore  Pipfile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci_test.yaml
config/: main.yaml
config/etl/: etl1.yaml
config/ml/: ml1.yaml
config/vis/: vis1.yaml
data/: .gitignore
data/dst/: .gitignore  Xtest.csv.dvc  Xtrain.csv.dvc  ytest.csv.dvc  ytrain.csv.dvc
data/raw/: .gitignore  amazon_alexa.tsv.dvc
dvclive/: params.yaml  report.html
dvclive/plots/metrics/: accuracy.tsv
etl/: Dockerfile  etl.py
ml/: evaluate.py  train.py
model/: nbm_sentiment_analysis.pkl.dvc
notebook/: Public_Relations_Department_Solution.ipynb
reports/: model_monitoring_report.html
s3/: s3_bucket.py
tests/: test_etl.py
tests-copy/: test_etl.py
utils/: delet_bucket.py  read_write_s3.py
vis/: monitoring.py
